# fijit-sys

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  dump.rdb
cmake/: cuda.cmake
data/: resnet-workload.json  resnet50.onnx  resnet50_input.onnx  sanity_check.onnx
proto/: CMakeLists.txt  onnx.pb.cc  onnx.pb.h
python/: bench_runner.py  out_trace.json
src/: abstract_operators.h  backtrace.h  bench_resnet50.cu  common.h  common_cuda.cc  common_cuda.cu  common_cuda.h  cublas_wrapper.cu  cublas_wrapper.h  cudnn_wrapper.cu  cudnn_wrapper.h  events.cu  events.h  executor.cu  executor.h  fijit.cu  fijit.h  kernel_db.cc  kernel_db.h  main.cu  memory_manager.cu  memory_manager.h  model_manager.cu  model_manager.h  onnx.pb.h  onnx_helper.cc  onnx_helper.h  operators.cu  operators.h  qps_bench.cu  reporter.cu  reporter.h  scheduler.cu  scheduler.h
src/benchmarks/: ops.cu
src/common/: common.h  common_cuda.cu  common_cuda.h
src/operators/: abstract_operators.h  cublas_wrapper.cu  cublas_wrapper.h  cudnn_wrapper.cu  cudnn_wrapper.h  operators.cu  operators.h
src/runtime/: common.h  events.cu  events.h  executor.cu  executor.h  memory_manager.cu  memory_manager.h  model_manager.cu  model_manager.h  reporter.cu  reporter.h  scheduler.cu  scheduler.h
src/utils/: align_map.cc  align_map.h  backtrace.h  kernel_db.cc  kernel_db.h  onnx_helper.cc  onnx_helper.h
